--- a/src/QuickerGitVersion/QuickerGitVersion.csproj
+++ b/src/QuickerGitVersion/QuickerGitVersion.csproj
@@ -1,5 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <Import Project="..\gitversion.props" Condition="Exists('..\gitversion.props')" />
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
@@ -10,14 +12,15 @@
     <!-- <SelfContained>false</SelfContained> -->
     <AssemblyTitle>QuickerGitVersion</AssemblyTitle>
     <AssemblyDescription>A simple GitVersion command line tool implementation</AssemblyDescription>
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>1.0.0.0</FileVersion>
+    <AssemblyVersion>0.1.0.0</AssemblyVersion>
+    <FileVersion>0.1.0.0</FileVersion>
+    <InformationalVersion>$(GitVersion_InformationalVersion)</InformationalVersion>
     
     <!-- Global Tool Configuration -->
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>quickergitversion</ToolCommandName>
     <PackageId>QuickerGitVersion</PackageId>
-    <PackageVersion>1.0.0</PackageVersion>
+    <PackageVersion>0.1.0</PackageVersion>
     <Authors>cuiliang</Authors>
     <Company>cuiliang</Company>
     <Description>A fast and lightweight GitVersion alternative for .NET projects</Description>
@@ -42,10 +45,3 @@
   </ItemGroup>
 
 </Project> 
-
-
-
-
-
-
-
